v0.0.16 (28 Sep 2013)
	Added a new parameter to "help()" and "version()" to disable the short option.

v0.0.15 (27 Sep 2013)
	Renamed "help" to "synopsis", property of "argument()".
	Renamed "argument" to "metavar", property of "option()".
	Minor improvements.

v0.0.14 (26 Sep 2013)
	Added "command()", "main()" and "argv()" to the Body instance.
	Removed "end()".

v0.0.13 (26 Sep 2013)
	Removed "line()", "paragraph()", "group()".
	Added "text()".

v0.0.12 (26 Sep 2013)
	Minor bugfixes.

v0.0.11 (25 Sep 2013)
	Added commands ("trailing" and "help" properties to "argument()").
	The "end" event now receives 3 new parameters: "printHelp()", "printUsage()"
		and "printVersion()".
	Removed "_debug" and "_filename" properties from the final object.
	Minor improvements.

v0.0.10 (23 Sep 2013)
	The default value of an option is now set with "default" instead of "value".
	Code inside the "end" event was preventing the parser from being gc'ed.
	Allowed negated flags with a short name.
	Added aliases.
	Added choices.
	Improved --usage message.
	Minor improvements.

v0.0.9 (20 Sep 2013)
	Added "columns()".
	Minor bugfixes.

v0.0.8 (19 Sep 2013)
	Fixed "readPackage()" with a missing default file.
	Added "prefix" parameter to the "text()" function.
	"usages()" now replaces the whole "usage" string.
	Added "line()" function. It differs from "text()" in that it isn't a new
		paragraph.
	Renamed "text()" to "paragraph()".
	Added "filter" parameter to "options()".
	Minor improvements.

v0.0.7 (18 Sep 2013)
	The api has been refactored to be more fluent.
	Some bugfixes.

v0.0.6 (16 Sep 2013)
	Options with a negative Number value are parsed correctly.
	The "argument()" function has been moved from the Argp to the Body and now
		accepts a second configuration parameter.

v0.0.5 (15 Sep 2013)
	Added a "type" setting to the option configuration.

v0.0.4 (15 Sep 2013)
	Added "footer()".
	The "fail()" function now prints the "try" message.

v0.0.3 (15 Sep 2013)