@@ -23,6 +23,8 @@ var cast = function (value){
 var Argp = module.exports = function (){
 	events.EventEmitter.call (this);
 	
+	this._exitStatus = 1;
+	
 	this._argv = null;
 	this._usages = [];
 	this._description = null;
@@ -89,20 +91,20 @@ Argp.prototype._errorTry = function (){
 Argp.prototype._errorChoice = function (value){
 	console.error (script + ": Unrecognized choice '" + value + "'.");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._errorConvert = function (name, type){
 	console.error (script + ": Option '" + name + "' is not a " + type +
 			".");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._errorAbbreviation = function (name){
 	console.error (script + ": Option '" + name + "' is ambiguous.");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._errorNotExpectedValue = function (name){
@@ -113,13 +115,13 @@ Argp.prototype._errorExpectedValue = function (name, negate){
 	console.error (script + ": Option '" + name + "' " +
 			(negate ? "does not require" : "requires") + " an argument.");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._errorUnrecognized = function (str, name){
 	console.error (script + ": Unrecognized " + str + " '" + name + "'.");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._errorUnrecognizedOption = function (name){
@@ -134,7 +136,7 @@ Argp.prototype._errorExpectedCommand = function (name, num, min){
 	console.error (script + ": Command '" + name + "' expects " +
 			(min ? min + " " : "") + num + " argument/s.");
 	this._errorTry ();
-	process.exit (1);
+	process.exit (this._exitStatus);
 };
 
 Argp.prototype._columnize = function (col1, col2){
@@ -1107,10 +1109,15 @@ Argp.prototype.email = function (str){
 	return this;
 };
 
+Argp.prototype.exitStatus = function (code){
+	this._exitStatus = code;
+	return this;
+};
+
 Argp.prototype.fail = function (str, code){
 	console.error (script + ": " + str);
 	this._errorTry ();
-	process.exit (code || 1);
+	process.exit (code || this._exitStatus);
 };
 
 Argp.prototype.main = function (){
